[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Tileset/TileSet.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Tileset/SnowFall.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Tileset/DoorTileset.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Tileset/Wall.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Tileset/Presents.png" type="Texture" id=8]

[sub_resource type="TileSet" id=1]
0/name = "Bricks"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 48, 48 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Flowers"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 64, 64, 16 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "Door"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 32, 0, 48, 48 )
2/tile_mode = 2
2/autotile/icon_coordinate = Vector2( 0, 0 )
2/autotile/tile_size = Vector2( 16, 16 )
2/autotile/spacing = 0
2/autotile/occluder_map = [  ]
2/autotile/navpoly_map = [  ]
2/autotile/priority_map = [  ]
2/autotile/z_index_map = [  ]
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "TileSet.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 80, 0, 16, 48 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="Animation" id=3]
resource_name = "Damage"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Layer/BlinkScreen:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 0 ), Color( 1, 0, 0, 0.717647 ), Color( 1, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "SnowAnimation"
length = 20.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SnowLayer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 20 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 312 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "SnowFall"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("SnowLayerAux:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 312 ) ]
}

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="EnemySpawner" type="Position2D" parent="."]
position = Vector2( 3.99426, 35.8115 )
z_index = 1

[node name="WallLayer" type="Node2D" parent="."]

[node name="Wall" type="Sprite" parent="WallLayer"]
position = Vector2( 72, 24 )
z_index = 3
texture = ExtResource( 5 )

[node name="Presents" type="Sprite" parent="WallLayer"]
position = Vector2( 72, 24 )
z_index = 1
texture = ExtResource( 8 )

[node name="UpperLayer" type="TileMap" parent="."]
z_index = 2
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 196608, 1, 0, 196609, 1, 1, 196610, 1, 1, 196611, 1, 1, 196612, 1, 3, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 1, 262144, 1, 0, 262145, 1, 3, 262146, 1, 1, 262147, 1, 3, 262148, 1, 2, 262149, 1, 3, 262150, 1, 0, 262151, 1, 3, 262152, 1, 1, 327680, 1, 3, 327681, 1, 2, 327682, 1, 3, 327683, 1, 2, 327684, 1, 3, 327685, 1, 2, 327686, 1, 3, 327687, 1, 2, 327688, 1, 3, 393216, 1, 2, 393217, 1, 3, 393218, 1, 2, 393219, 1, 3, 393220, 1, 2, 393221, 1, 3, 393222, 1, 2, 393223, 1, 3, 393224, 1, 2, 458752, 1, 1, 458753, 1, 2, 458754, 1, 0, 458755, 1, 2, 458756, 1, 3, 458757, 1, 2, 458758, 1, 1, 458759, 1, 2, 458760, 1, 0, 524288, 1, 1, 524289, 1, 0, 524292, 1, 2, 524295, 1, 1, 524296, 1, 0, 589824, 1, 3, 589827, 1, 0, 589828, 1, 3, 589829, 1, 1, 589832, 1, 3, 655360, 1, 2, 655362, 1, 0, 655364, 1, 2, 655366, 1, 1, 655368, 1, 2, 720896, 1, 3, 720897, 1, 1, 720899, 1, 0, 720901, 1, 1, 720903, 1, 0, 720904, 1, 3, 786432, 1, 2, 786434, 1, 1, 786436, 1, 3, 786438, 1, 0, 786440, 1, 2, 851968, 1, 3, 851971, 1, 1, 851972, 1, 2, 851973, 1, 0, 851976, 1, 3, 917504, 1, 2, 917505, 1, 3, 917508, 1, 3, 917511, 1, 3, 917512, 1, 2, 983040, 1, 3, 983041, 1, 2, 983042, 1, 1, 983043, 1, 1, 983044, 1, 2, 983045, 1, 0, 983046, 1, 0, 983047, 1, 2, 983048, 1, 3, 1048576, 1, 2, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 3, 1048581, 1, 1, 1048582, 1, 1, 1048583, 1, 1, 1048584, 1, 2, 1114112, 1, 0, 1114113, 1, 0, 1114114, 1, 0, 1114115, 1, 0, 1114116, 1, 2, 1114117, 1, 1, 1114118, 1, 1, 1114119, 1, 1, 1114120, 1, 1, 1179648, 1, 0, 1179649, 1, 0, 1179650, 1, 0, 1179651, 1, 0, 1179652, 1, 3, 1179653, 1, 1, 1179654, 1, 1, 1179655, 1, 1, 1179656, 1, 1, 1245184, 1, 0, 1245185, 1, 0, 1245186, 1, 0, 1245187, 1, 0, 1245188, 1, 2, 1245189, 1, 1, 1245190, 1, 1, 1245191, 1, 1, 1245192, 1, 1 )

[node name="LowerLayer" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 131072, 0, 131072, 131073, 0, 131072, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131079, 0, 131072, 131080, 0, 131072, 196608, 0, 131072, 196609, 0, 131072, 196610, 0, 131072, 196611, 0, 131072, 196612, 0, 131072, 196613, 0, 131072, 196614, 0, 131072, 196615, 0, 131072, 196616, 0, 131072, 262144, 0, 131072, 262145, 0, 131072, 262146, 0, 131072, 262147, 0, 131072, 262148, 0, 131072, 262149, 0, 131072, 262150, 0, 131072, 262151, 0, 131072, 262152, 0, 131072, 327680, 0, 131072, 327681, 0, 131072, 327682, 0, 131072, 327683, 0, 131072, 327684, 0, 131072, 327685, 0, 131072, 327686, 0, 131072, 327687, 0, 131072, 327688, 0, 131072, 393216, 0, 131072, 393217, 0, 131072, 393218, 0, 131072, 393219, 0, 131072, 393220, 0, 131072, 393221, 0, 131072, 393222, 0, 131072, 393223, 0, 131072, 393224, 0, 131072, 458752, 0, 131072, 458753, 0, 131072, 458754, 0, 131072, 458755, 0, 131072, 458756, 0, 131072, 458757, 0, 131072, 458758, 0, 131072, 458759, 0, 131072, 458760, 0, 131072, 524288, 0, 131072, 524289, 0, 131072, 524290, 0, 0, 524291, 0, 0, 524292, 0, 131072, 524293, 0, 0, 524294, 0, 0, 524295, 0, 131072, 524296, 0, 131072, 589824, 0, 131072, 589825, 0, 0, 589826, 0, 65536, 589827, 0, 131072, 589828, 0, 131072, 589829, 0, 131072, 589830, 0, 65536, 589831, 0, 0, 589832, 0, 131072, 655360, 0, 131072, 655361, 0, 0, 655362, 0, 131072, 655363, 0, 65536, 655364, 0, 131072, 655365, 0, 65536, 655366, 0, 131072, 655367, 0, 0, 655368, 0, 131072, 720896, 0, 131072, 720897, 0, 131072, 720898, 0, 65536, 720899, 0, 131072, 720900, 0, 65536, 720901, 0, 131072, 720902, 0, 65536, 720903, 0, 131072, 720904, 0, 131072, 786432, 0, 131072, 786433, 0, 0, 786434, 0, 131072, 786435, 0, 65536, 786436, 0, 131072, 786437, 0, 65536, 786438, 0, 131072, 786439, 0, 0, 786440, 0, 131072, 851968, 0, 131072, 851969, 0, 0, 851970, 0, 65536, 851971, 0, 131072, 851972, 0, 131072, 851973, 0, 131072, 851974, 0, 65536, 851975, 0, 0, 851976, 0, 131072, 917504, 0, 131072, 917505, 0, 131072, 917506, 0, 0, 917507, 0, 0, 917508, 0, 131072, 917509, 0, 0, 917510, 0, 0, 917511, 0, 131072, 917512, 0, 131072, 983040, 0, 131072, 983041, 0, 131072, 983042, 0, 131072, 983043, 0, 131072, 983044, 0, 131072, 983045, 0, 131072, 983046, 0, 131072, 983047, 0, 131072, 983048, 0, 131072, 1048576, 0, 131072, 1048577, 0, 131072, 1048578, 0, 131072, 1048579, 0, 131072, 1048580, 0, 131072, 1048581, 0, 131072, 1048582, 0, 131072, 1048583, 0, 131072, 1048584, 0, 131072, 1114112, 0, 131072, 1114113, 0, 131072, 1114114, 0, 131072, 1114115, 0, 131072, 1114116, 0, 131072, 1114117, 0, 131072, 1114118, 0, 131072, 1114119, 0, 131072, 1114120, 0, 131072, 1179648, 0, 131072, 1179649, 0, 131072, 1179650, 0, 131072, 1179651, 0, 131072, 1179652, 0, 131072, 1179653, 0, 131072, 1179654, 0, 131072, 1179655, 0, 131072, 1179656, 0, 131072, 1245184, 0, 131072, 1245185, 0, 131072, 1245186, 0, 131072, 1245187, 0, 131072, 1245188, 0, 131072, 1245189, 0, 131072, 1245190, 0, 131072, 1245191, 0, 131072, 1245192, 0, 131072 )

[node name="GoblinSpawner" type="Position2D" parent="."]
position = Vector2( 72, 342 )
z_index = 1

[node name="DialogueSpawner" type="Position2D" parent="."]
position = Vector2( 72, 156 )
z_index = 3

[node name="HudSpawner" type="Position2D" parent="."]
position = Vector2( 0, 310 )
z_index = 10

[node name="Layer" type="Node2D" parent="."]
z_index = 15

[node name="BlinkScreen" type="Panel" parent="Layer"]
modulate = Color( 1, 0, 0, 0 )
margin_right = 144.0
margin_bottom = 312.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DamageAnimation" type="AnimationPlayer" parent="."]
anims/Damage = SubResource( 3 )

[node name="SnowAnimator" type="AnimationPlayer" parent="."]
anims/SnowAnimation = SubResource( 4 )

[node name="SnowAnimatorAux" type="AnimationPlayer" parent="."]
anims/SnowFall = SubResource( 5 )

[node name="SnowLayer" type="Node2D" parent="."]
z_index = 3

[node name="Snow" type="Sprite" parent="SnowLayer"]
position = Vector2( 72, 156 )
texture = ExtResource( 3 )
hframes = 2

[node name="SnowAux" type="Sprite" parent="SnowLayer"]
position = Vector2( 72, -156 )
texture = ExtResource( 3 )
hframes = 2

[node name="SnowLayerAux" type="Node2D" parent="."]
position = Vector2( 0, 77.2058 )
z_index = 3

[node name="Snow2" type="Sprite" parent="SnowLayerAux"]
position = Vector2( 72, 156 )
texture = ExtResource( 3 )
hframes = 2
frame = 1

[node name="SnowAux2" type="Sprite" parent="SnowLayerAux"]
position = Vector2( 72, -156 )
texture = ExtResource( 3 )
hframes = 2
frame = 1
[connection signal="canSpawn" from="." to="." method="canSpawn"]
